--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -13,6 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+    <link rel="stylesheet" href="http://cdn.graphalchemist.com/alchemy.min.css" />
+    <script type="text/javascript" src="http://cdn.graphalchemist.com/alchemy.min.js"></script>
 
     <title>Monorepolyser</title>
   </head>
